syntax="proto3";

package comms;
option go_package = "../raft";


service Lookup {
  rpc Search (Query) returns (QueryResponse) {}
}
service Raft {
  rpc RequestVotes (Term) returns (Vote) {}
}

message Query {
  string Word = 1;
  string Source = 2;
}
message QueryResponse {
  message SF {
    string FileName = 1;
    string FileLoc = 2;
    repeated int32 LineLoc = 3;
    repeated int32 WordLoc = 4;
  }
  repeated SF SFile = 1;
}
message Term {
  int32 TermCount = 1;
  string LeaderPort = 2;
}
message Vote {
  bool Elected = 1;
}
message Payload {
  repeated string Data = 1;
}